--- a/02 - Working with Strings.ipynb
+++ b/02 - Working with Strings.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Programming for Data Science Series (Lab Session 2)\n",
     "## Working with Strings\n",
-    "### String methods - Accessing"
+    "### String methods - Accessing\n",
+    "> Note: character position start with zero, use square bracket with character position"
    ]
   },
   {
