Lab session completed

--- a/01 - Datatypes & Operators.ipynb
+++ b/01 - Datatypes & Operators.ipynb
@@ -513,11 +513,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> End of Lab Session 1"
+   ]
   }
  ],
  "metadata": {
