--- a/03 - Advanced Data Types Part 1.ipynb
+++ b/03 - Advanced Data Types Part 1.ipynb
@@ -220,6 +220,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'First', 2.5, 'Good', True]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list can include different data types\n",
+    "various_data = [1, 'First', 2.5, 'Good', True]\n",
+    "various_data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -905,6 +927,28 @@
     "#now we can convert updated garage_list to tuple\n",
     "garage_tuple = tuple(garage_list)\n",
     "garage_tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 'Second', 3.5, 'Bad', False)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tuple can include different data types\n",
+    "various_data_tuple = (2, 'Second', 3.5, 'Bad', False)\n",
+    "various_data_tuple"
    ]
   },
   {
