Update and rename 02-Working-with-Strings.ipynb to 02-StringsManipulationInPython.ipynb

--- a/02-StringsManipulationInPython.ipynb
+++ b/02-StringsManipulationInPython.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Programming for Data Science Series (Lab Session 2)\n",
-    "## Working with Strings\n",
+    "## Strings Manipulation in Python\n",
     "### String methods - Accessing\n",
     "* use len() method to get length of the string\n",
     "* use find() method to find the position of a character\n",
