--- a/004-AdvancedDataTypesPart2.ipynb
+++ b/004-AdvancedDataTypesPart2.ipynb
@@ -536,6 +536,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <b>Below example use for loop, for those who are not familiar with looping, please skip to Ln[45] or refer <i>Control Structure</i> tutotial</b>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
