--- a/005-ControlStructure.ipynb
+++ b/005-ControlStructure.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,8 @@
       "21\n",
       "No remainder for score 24\n",
       "27\n",
-      "No remainder for score 30\n"
+      "No remainder for score 30\n",
+      "Loop ended\n"
      ]
     }
    ],
