--- a/009-CSVFiles.ipynb
+++ b/009-CSVFiles.ipynb
@@ -213,6 +213,36 @@
     "    csv_writer.writerow({'Name': 'Kyi Kyi', 'Department': 'Accounting', 'Salary': 150000})\n",
     "    csv_writer.writerow({'Name': 'Mu Mu', 'Department': 'IT', 'Salary': 250000})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Kyi Kyi', 'Accounting', '150000']\n",
+      "['Mu Mu', 'IT', '250000']\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = []\n",
+    "with open('dict_format.csv') as csv_file:\n",
+    "    csv_reader = csv.reader(csv_file) \n",
+    "    fields = next(csv_reader)\n",
+    "    for row in csv_reader: \n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
