--- a/012-WorkingWithPandasDataframe.ipynb
+++ b/012-WorkingWithPandasDataframe.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Programming for Data Science Series (Lab Session 12)\n",
-    "## Working with Pandas Dataframe\n",
+    "## Introduction to Numpy\n",
     "### Objectives\n",
     "* Learn how to wrangle data using Pandas\n",
     " * Dropping NULL values in our dataset\n",
