--- a/015-PlottingLineCharts.ipynb
+++ b/015-PlottingLineCharts.ipynb
@@ -9,7 +9,8 @@
     "### Objectives\n",
     "* To be able to plot line charts using matplotlib \n",
     "* To understand different parameters for plotting line charts\n",
-    "* To understand how to customize line charts"
+    "* To understand how to customize line charts\n",
+    "* To be able to plot multiple lines in a chart"
    ]
   },
   {
