Video Lessons Added

--- a/011-ReadingDataPandas.ipynb
+++ b/011-ReadingDataPandas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "5  Maung Hla           HR  155000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -950,78 +950,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>department</th>\n",
-       "      <th>salary</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
        "      <td>Win Win</td>\n",
        "      <td>Engineering</td>\n",
        "      <td>250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>Sein Sein</td>\n",
        "      <td>IT</td>\n",
        "      <td>300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>Aung Aung</td>\n",
        "      <td>Finance</td>\n",
        "      <td>200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>Ni Ni</td>\n",
        "      <td>HR</td>\n",
        "      <td>150000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
        "      <td>Maung Ba</td>\n",
        "      <td>Finance</td>\n",
        "      <td>205000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>6</td>\n",
        "      <td>Maung Hla</td>\n",
        "      <td>HR</td>\n",
-       "      <td>150000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Kyaw Kyaw</td>\n",
-       "      <td>Management</td>\n",
-       "      <td>500000</td>\n",
+       "      <td>155000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id       name   department  salary\n",
-       "0   1    Win Win  Engineering  250000\n",
-       "1   2  Sein Sein           IT  300000\n",
-       "2   3  Aung Aung      Finance  200000\n",
-       "3   4      Ni Ni           HR  150000\n",
-       "4   5   Maung Ba      Finance  205000\n",
-       "5   6  Maung Hla           HR  150000\n",
-       "6   7  Kyaw Kyaw   Management  500000"
+       "        Name   Department  Salary\n",
+       "0    Win Win  Engineering  250000\n",
+       "1  Sein Sein           IT  300000\n",
+       "2  Aung Aung      Finance  200000\n",
+       "3      Ni Ni           HR  150000\n",
+       "4   Maung Ba      Finance  205000\n",
+       "5  Maung Hla           HR  155000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
